<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/registration_data"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/_name"/>

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/_email"/>

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/_home_mobile"/>

        <TextView
            android:id="@+id/homeMobileTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/_home_phone"/>

        <TextView
            android:id="@+id/homePhoneTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/_address"/>

        <TextView
            android:id="@+id/addressTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/_zip_code"/>

        <TextView
            android:id="@+id/zipCodeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />

    </LinearLayout>

</LinearLayout>